# covmatic-robotcontrol

./: CHANGELOG.md  README.md  main.py  pyproject.toml
.github/workflows/: test.yml
covmatic_robotcontrol/: robot_station.py
covmatic_robotcontrol/robot/: robot_api.py
covmatic_robotcontrol/test/: test_robot.py
protocols/: station_robot_execution.py
src/covmatic_robotcontrol/: robot.py  robot_api.py  robot_station.py
src/covmatic_robotstation/: robot.py  robot_api.py  robot_station.py
test/: test_robot.py  test_robot_api_http.py  test_station.py
