[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "covmatic-robotcontrol"
authors = [
    { name="Agostino Facotti", email="agostino.facotti@asst-bergamoest.it"},
]
description = "Extension of an Covmatic Station class that can control a RobotManager instance"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]

[project-urls]
"Homepage" = "https://github.com/ASST-Bergamo-Est/CovidSeq"

[tool.hatch.version]
path = "covmatic_robotcontrol/__init__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=covmatic_robotcontrol {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

